--- a/formin.html
+++ b/formin.html
@@ -76,7 +76,7 @@
         <tr>
             <td>Sex:</td>
             <td><div class="formstyle" id="sex">
-                <input type="radio" name="formsex" id="male">Male <input type="radio" name="formsex" id="female">Female<b><span class="formerror"></span></b>
+                <input type="checkbox" name="formsex" id="male">Male <input type="checkbox" name="formsex" id="female">Female<b><span class="formerror"></span></b>
             </div></td>
         </tr>
 
@@ -84,14 +84,14 @@
         <tr>
             <td>Language</td>
             <td><label><div class="formstyle" id="language">
-                <input type="radio" name="formlanguage" id="english">English <input type="radio" name="formlanguage" id="non-english">Non-English<b><span class="formerror"></span></b>
+                <input type="checkbox" name="formlanguage" id="english">English <input type="checkbox" name="formlanguage" id="non-english">Non-English<b><span class="formerror"></span></b>
             </div></label></td>
         </tr>
 
         <tr>
             <td>About: </td>
             <td><div class="formstyle" id="about">
-                <textarea name="formabout" id="" cols="30" rows="10"></textarea><b><span class="formerror"></span></b>
+                <textarea name="formabout" id="" cols="10" rows="10"></textarea><b><span class="formerror"></span></b>
             </div></td>
         </tr>
 
